--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,12 @@ body {
     height: auto;
   }
 
-  header.logo img {
+  #logo-img {
     transition: var(--animation-timing);
   }
 
-  .header.menu-open {
-    transform: translateX(calc(var(--shape-width)));
-    max-width: 50%;
+  #logo-img.menu-open {
+    transform: scale(0.9) translateX(calc(var(--shape-width)*0.3));
   }
 
   /* BANDEAU -----------------------------*/
@@ -187,57 +186,81 @@ body {
   div.content {
     transition: var(--animation-timing);
   }
-
   .content.menu-open {
-    transform: translateX(calc(var(--shape-width)));
+    transform: scale(0.9) translateX(calc(var(--shape-width)*0.5));
+  }
+  #titre.menu-open{
+    font-size: 20px;
   }
 
   /*Timer triathlon*/
 
   section.Timer-tri{
-    background: url('../Images/Fond\ dessin.jpeg');
     display: flex;
     position: absolute;
-    width: 250px;
-    height: 250px;
-    top: 450px;
-    margin-left: 90px;
-    background: url('../Images/Fond\ dessin.jpeg');
-    /* background-color: red; */
+    width: 400px;
+    height: 220px;
+    top: 420px;
+    margin-left: 70px;
   }
-  
+
+  div.dessin-tri img{
+    width: 100%;
+    margin-top: 10px;
+  }
+  .dessin-tri {
+      transition: var(--animation-timing);
+  }
+  .dessin-tri.menu-open {
+    transform: scale(0.9) translateX(calc(var(--shape-width)*0.6));
+  }
+
   div.Timer {
     display: flex;
     position: absolute;
-    top: 450px;
-    margin-left: 90px;
+    /* margin-top: 20px; */
     box-sizing: border-box;
-    font-family: "Poppins";
-    display: flex;
+    font-family: "Bank Gothic";
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-  }
-
-  h1{
-    font-size: 30px;
-    font-weight: 5000;
-    margin-bottom: 20px;
+    justify-content:first baseline;
+    margin-left: 10px;
   }
 
   .timebox {
     display: flex;
-    gap: 20px;
+    gap: 25px;
+    align-items: center;
   }
 
   .time{
-    text-align: center;
+    display: flex;
+    gap: 0.2rem;
+    flex-direction: column;
+    align-items:baseline;
+  }  
+  .time h2,
+  .time p {
+    margin: 0;
   }
 
   .time h2 {
-    font-size: 20px;
-    font-weight: 100;
+    font-size: 25px;
+    font-weight: 10;
+    margin-right: 10px;
   }
+  .time p {
+    margin: 0;
+    font-size: 10px;
+    font-weight: 50;
+  }
+    .Timer {
+      transition: var(--animation-timing);
+  }
+  .Timer.menu-open {
+    transform: translateX(calc(var(--shape-width) * 0.6));
+  }
+
 }
 
 
