--- a/css/styles_Rbnb.css
+++ b/css/styles_Rbnb.css
@@ -84,8 +84,8 @@ body {
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked){
-  --foreground: #ffffff;
-  --background: #ffffff;
+    --foreground: #ffffff;
+    --background: #ffffff;
   }
 
   .hamburger-menu::before,
@@ -162,183 +162,133 @@ body {
   }
 
   /*Section BIENVENUE */
-  section.Bienvenue {
-    z-index: 0;
-    position:relative;
-    z-index: 999;
-    margin: 0;
-    top:60px;
-    display: flex;
-    margin: 0;
-    width: 100%;
-    align-items: center;
-    height: 600px;
-    justify-content: center;
-    background-image: url('../Images/GIF2.gif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  .Annonces{
+    margin: 20px;
   }
-
-  div.Timer {
-    display: flex;
-    width: 90%;
-    margin:auto;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-family: "Bank Gothic";
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .timebox {
-    display: flex;
-    align-items: center;
-    margin:0;
-    gap:40px;
-  }
-
-  .time{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }  
-  .time h2,
-  .time p {
-    margin: 0;
-  }
-
-  .time h2 {
-    font-size: 40px;
-    font-weight: 10;
-    color: #51d4fc;
-    justify-content: space-between;
-  }
-  .time p {
-    margin: 0;
-    font-size: 10px;
-    font-weight: 50;
-    color: #ffffff;
-  }
-  .texte {
-    position: absolute;
-    margin: 0;
-    bottom: -20%;
+  
+  .section-title{
+    color: white;
+    font-size: 50px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    position: relative;
     text-align: center;
-    max-width: 60%;
   }
 
-  #Début{
-    color: #ffffff;
-    gap: 1px;
-  }
-  #Fin{
-    margin-top: 1%;
-    font-weight: 1000;
-    color: #fe9162;
+  .best-plants {
+    min-height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    margin: auto;
+    justify-content:center;
   }
 
-  .Bienvenue {
+  .plant-box{
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    max-width: 400px;
+    /* flex:1; */
+    text-decoration: none;
+    margin: 5px;
+    background-color: #2f2f356e;
+    border: #2f2f356e solid 2px;
+    border-radius: 15px;
+  }
+
+  .plant-box img{
+    position: relative;
+    min-width: 400px ;
+    border-radius: 40px;
+    width: 100%;
+    margin-top: 7px;
+    margin-left: 5px;
+  }
+
+  .plant-details{
+    margin: 0;
+    position: relative;
+    color: white;
+    margin-left: 5px;
+  }
+
+  .plant-name{
+    font-weight: bold;
+  }
+  .plant-price{
+    font-weight: bold;
+  }
+  .plant-chambres{
+    position: relative;
+    margin-top: -7px;
+    font-style: italic;
+    color: white;
+  }
+  .plant-description{
+    position: relative;
+    margin-top: -7px;
+    font-size: small;
+    font-style: italic;
+    color: #cecece96;
+  }
+
+  /* .Bienvenue {
       transition: var(--animation-timing);
   }
   .Bienvenue.menu-open {
     transform: translateX(20%);
   }
 
-  /* .Bienvenue h2{
-    text-align: center;
-    padding-left: 5%;
-    width: auto;
-    font-size: auto;
-  }
-  .Début{ 
-    color: #fe9162;
-    text-align: center;
-  }
-  .Fin{
-    font-weight: 1000;
-    color: #16bfd6;
-  } */
-
   div.content {
     transition: var(--animation-timing);
   }
   .content.menu-open {
     transform: scale(1) translateX(calc(var(--shape-width)*0.5));
+
+}
+
+
+
+
+
+
+
+
+
+/* Version web */
+/* @media screen and (min-width: 600px) { */
+  /* Tête de page */
+  header.header {
+      display: flex;
+      align-items: center;
   }
-
-  /*Timer triathlon*/
-
-  /* section.Timer-tri{
-    display: flex;
-    position: absolute;
-    width: 80%;
+  header.header img{
+    width: 300px;
     height: auto;
-    top: 60%;
-    margin-left: 70px;
   }
 
-  div.dessin-tri img{
-    width: 100%;
-    margin-top: 4%;
+  section.top-page {
+    background: url('../images/Fond\ dessin.jpeg');
+      background-size: cover;
+      height: 100vh;
+      padding: 5px;
   }
-  .dessin-tri {
-      transition: var(--animation-timing);
-  }
-  .dessin-tri.menu-open {
-    transform: scale(0.8) translateX(calc(var(--shape-width)*0.6)) translateY(-10%);
-  }
-
-  div.Timer {
-    display: flex;
-    position: absolute;
-    /* margin-top: 20px; */
-    /* box-sizing: border-box;
-    font-family: "Bank Gothic";
-    flex-direction: column;
-    align-items: center;
-    justify-content:first baseline;
-    margin-left: 2%;
+  .big-title {
+      font-size: 50px;
+      color: rgb(28, 16, 16);
+      text-align: center;
+      margin-top: 20px;
   }
 
-  .timebox {
-    display: flex;
-    gap: 20%;
-    align-items: center;
+  /* Menu de navigation */
+  nav.nav{
+      display: flex;
+      font-style: bold;
+      justify-content: space-between;
+      list-style: none;
+      width: 400px;
+      margin-left: 50px;
   }
-
-  .time{
-    display: flex;
-    flex-direction: column;
-  }  
-  .time h2,
-  .time p {
-    margin: 0;
-  }
-
-  .time h2 {
-    font-size: 25px;
-    font-weight: 10;
-  }
-  .time p {
-    margin: 0;
-    font-size: 10px;
-    font-weight: 50;
-  }
-    .Timer {
-      transition: var(--animation-timing);
-  }
-  .Timer.menu-open {
-    transform: translateX(40%) translateY(10%);
-  } */
-
 /* } */
-
-
-
-
-
-
-
-
