--- a/css/circuit.css
+++ b/css/circuit.css
@@ -84,12 +84,12 @@ body {
     top: var(--hamburger-topmargin);
     left: var(--hamburger-leftmargin);
     cursor: pointer;
-    z-index: 1004;
+    z-index: 1003;
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked){
-  --foreground: #ffffff;
-  --background: #ffffff;
+    --foreground: #ffffff;
+    --background: #ffffff;
   }
 
   .hamburger-menu::before,
@@ -151,7 +151,7 @@ body {
     width: var(--shape-width);
     height: 100vh;
     list-style: none;
-    z-index: 1003;
+    z-index: 1002;
   }
 
   .sidebar li a {
@@ -187,106 +187,179 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: black;
-    z-index: 1000;
+    z-index: 1001;
     opacity: 0.3;
     translate: -100%;
   }
 
- 
   .cache-noir.menu-open {
     translate: 0;
   }
 
   /*Section BIENVENUE */
-  section.Bienvenue {
-    z-index: 0;
-    position:relative;
-    z-index: 999;
-    margin: 0;
-    top:60px;
-    display: flex;
-    margin: 0;
+  .circuit-triathlon{
+    position: relative;
     width: 100%;
-    align-items: center;
-    height: 600px;
-    justify-content: center;
-    background-image: url('../Images/GIF2.gif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow-x: hidden;
   }
 
-  div.Timer {
-    display: flex;
-    width: 90%;
-    margin:auto;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-family: "Bank Gothic";
-    flex-direction: column;
-    align-items: center;
-    overflow-x: hidden;
-  }
 
-  .timebox {
-    display: flex;
-    align-items: center;
-    margin:0;
-    gap:40px;
-  }
+  @media screen and (max-width: 700px) {
+    .circuit-triathlon{
+        position: relative;
+        width: 90%;
+        margin-top:10px;
+        margin-left:3%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .circuit{
+        margin-top: 50px;
+    }
+    .circuit h2{
+        color: #ffffff;
+    }
+    .circuit img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 10px;
+    }
+    .bikemap-link{
+        position: relative;
+        width: 100%;
+        height: 30px;
+        background-color: rgb(70, 35, 244);
+        border-radius: 5px;
+        color: white;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    .circuit-details{
+        position: relative;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
+        grid-column-gap: 5px;
+        grid-row-gap: 5px;
+    }
+    .circuit-details div{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        height: 60px;
+        background-color: #c5c5c5;
+        border-radius: 10px;
+        padding-inline: 20px;
+        gap:3px;
+    }
+    .valeur{
+        font-weight: bold;
+        font-size: 20px;
+    }
+    .légende{
+        font-size: 14px;
+        color: #555555;
+    }
+    
+    }
 
-  .time{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }  
-  .time h2,
-  .time p {
-    margin: 0;
-  }
+  @media screen and (min-width: 701px) {
+    .circuit-triathlon{
+        position: relative;
+        width: 100%;
+        margin-top:10px;
+        margin-left:3%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .circuit{
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
 
-  .time h2 {
-    font-size: 40px;
-    font-weight: 10;
-    color: #51d4fc;
-    justify-content: space-between;
-  }
-  .time p {
-    margin: 0;
-    font-size: 10px;
-    font-weight: 50;
-    color: #ffffff;
-  }
-  .texte {
-    position: absolute;
-    margin: 0;
-    bottom: -20%;
-    text-align: center;
-    max-width: 60%;
-  }
+    .type{
+        width: 50%;
+        max-width: 500px;
+    }
+    .circuit h2{
+        color: #ffffff;
+    }
+    .circuit img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 10px;
+    }
+    .bikemap-link{
+        position: relative;
+        width: 100%;
+        height: 30px;
+        background-color: rgb(70, 35, 244);
+        border-radius: 5px;
+        color: white;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    .circuit-details{
+        position: relative;
+        width: 40%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
+        grid-column-gap: 5px;
+        grid-row-gap: 5px;
+    }
+    .circuit-details div{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        height: 80px;
+        background-color: #c5c5c5;
+        border-radius: 10px;
+        padding-inline: 20px;
+        gap:3px;;
+    }
+    .valeur{
+        display: flex;
+        font-weight: bold;
+        font-size: 20;
+        justify-items: center;
+    }
+    .légende{
+        color: #555555;
+    }
+    
+}
 
-  #Début{
-    color: #ffffff;
-    gap: 1px;
-  }
-  #Fin{
-    margin-top: 1%;
-    font-weight: 1000;
-    color: #fe9162;
-  }
-
-  .Bienvenue {
+  .circuit-triathlon{
       transition: var(--animation-timing);
   }
-  .Bienvenue.menu-open {
+  .circuit-triathlon.menu-open {
     transform: translateX(calc(100vw*0.175));
-    overflow-x: hidden;
   }
-
-
-
 
 
 
