--- a/css/styles_Rbnb.css
+++ b/css/styles_Rbnb.css
@@ -49,19 +49,24 @@ body {
     z-index: 1001;
   }
 
-  .bandeau img {
+  .bandeau a {
     width: 35%;
     max-width: 200px;
     height: auto;
     z-index: 1001;
   }
 
+  .bandeau img {
+    width: 100%;
+  }
+
+
   #logo-img {
     transition: var(--animation-timing);
   }
 
   #logo-img.menu-open {
-    transform: translateX(30%);
+    transform: translateX(calc(100vw*0.175));
   }
 
 
@@ -80,12 +85,12 @@ body {
     top: var(--hamburger-topmargin);
     left: var(--hamburger-leftmargin);
     cursor: pointer;
-    z-index: 1003;
+    z-index: 1004;
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked){
-    --foreground: #ffffff;
-    --background: #ffffff;
+  --foreground: #ffffff;
+  --background: #ffffff;
   }
 
   .hamburger-menu::before,
@@ -147,7 +152,7 @@ body {
     width: var(--shape-width);
     height: 100vh;
     list-style: none;
-    z-index: 1002;
+    z-index: 1003;
   }
 
   .sidebar li a {
@@ -155,24 +160,56 @@ body {
     list-style: none;
     color: white;
     text-decoration: none;
+    height:45px;
+    align-items: center;
+    margin:0;
+    padding:0;
+  }
+
+  .sidebar li a::before {
+    content: "";
+    position: absolute;
+    background-color: #8a8a8a29;
+    left:0;
+    margin-top: -45px;
+    width: 100%;
+    height: 0.3px;
+    z-index: 1003;
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked)+.sidebar{
     translate: 0;
   }
 
-  /*Section BIENVENUE */
-  .Annonces{
-    margin: 20px;
+  .cache-noir{
+    position:fixed;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    z-index: 1000;
+    opacity: 0.3;
+    translate: -100%;
   }
+ 
+  .cache-noir.menu-open {
+    translate: 0;
+  }
+
+  /*Section BIENVENUE */
   
   .section-title{
+    position: relative;
     color: white;
+    width: 100vw;
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     position: relative;
     text-align: center;
+    justify-content: center;
+    margin-top: 80px;
   }
 
   .best-plants {
@@ -234,61 +271,14 @@ body {
     color: #cecece96;
   }
 
-  /* .Bienvenue {
+  .Annonces {
       transition: var(--animation-timing);
   }
-  .Bienvenue.menu-open {
-    transform: translateX(20%);
+  .Annonces.menu-open {
+    transform: translateX(calc(100vw*0.175));
   }
 
-  div.content {
-    transition: var(--animation-timing);
-  }
-  .content.menu-open {
-    transform: scale(1) translateX(calc(var(--shape-width)*0.5));
-
-}
 
 
 
 
-
-
-
-
-
-/* Version web */
-/* @media screen and (min-width: 600px) { */
-  /* Tête de page */
-  header.header {
-      display: flex;
-      align-items: center;
-  }
-  header.header img{
-    width: 300px;
-    height: auto;
-  }
-
-  section.top-page {
-    background: url('../images/Fond\ dessin.jpeg');
-      background-size: cover;
-      height: 100vh;
-      padding: 5px;
-  }
-  .big-title {
-      font-size: 50px;
-      color: rgb(28, 16, 16);
-      text-align: center;
-      margin-top: 20px;
-  }
-
-  /* Menu de navigation */
-  nav.nav{
-      display: flex;
-      font-style: bold;
-      justify-content: space-between;
-      list-style: none;
-      width: 400px;
-      margin-left: 50px;
-  }
-/* } */
