--- a/css/supporter.css
+++ b/css/supporter.css
@@ -49,19 +49,24 @@ body {
     z-index: 1001;
   }
 
-  .bandeau img {
+  .bandeau a {
     width: 35%;
     max-width: 200px;
     height: auto;
     z-index: 1001;
   }
 
+  .bandeau img {
+    width: 100%;
+  }
+
+
   #logo-img {
     transition: var(--animation-timing);
   }
 
   #logo-img.menu-open {
-    transform: translateX(30%);
+    transform: translateX(calc(100vw*0.175));
   }
 
 
@@ -80,12 +85,12 @@ body {
     top: var(--hamburger-topmargin);
     left: var(--hamburger-leftmargin);
     cursor: pointer;
-    z-index: 1003;
+    z-index: 1004;
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked){
-    --foreground: #ffffff;
-    --background: #ffffff;
+  --foreground: #ffffff;
+  --background: #ffffff;
   }
 
   .hamburger-menu::before,
@@ -147,7 +152,7 @@ body {
     width: var(--shape-width);
     height: 100vh;
     list-style: none;
-    z-index: 1002;
+    z-index: 1003;
   }
 
   .sidebar li a {
@@ -155,9 +160,40 @@ body {
     list-style: none;
     color: white;
     text-decoration: none;
+    height:45px;
+    align-items: center;
+    margin:0;
+    padding:0;
+  }
+
+  .sidebar li a::before {
+    content: "";
+    position: absolute;
+    background-color: #8a8a8a29;
+    left:0;
+    margin-top: -45px;
+    width: 100%;
+    height: 0.3px;
+    z-index: 1003;
   }
 
   .hamburger-menu.hamburger-menu:has(input:checked)+.sidebar{
+    translate: 0;
+  }
+
+  .cache-noir{
+    position:fixed;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    z-index: 1000;
+    opacity: 0.3;
+    translate: -100%;
+  }
+ 
+  .cache-noir.menu-open {
     translate: 0;
   }
 
@@ -192,21 +228,12 @@ body {
     font-size: 40px;
   }
 
-
-  /* .Bienvenue {
+  .Supporters{
       transition: var(--animation-timing);
   }
-  .Bienvenue.menu-open {
-    transform: translateX(20%);
+  .Supporters.menu-open {
+    transform: translateX(calc(100vw*0.175));
   }
-
-  div.content {
-    transition: var(--animation-timing);
-  }
-  .content.menu-open {
-    transform: scale(1) translateX(calc(var(--shape-width)*0.5));
-
-}
 
 
 
