--- a/css/styles_Rbnb.css
+++ b/css/styles_Rbnb.css
@@ -232,13 +232,36 @@ body {
     border-radius: 15px;
   }
 
+  .plant-image{
+    position:relative;
+    display: flex;
+    justify-content: center;
+  }
+
+
   .plant-box img{
     position: relative;
-    min-width: 400px ;
-    border-radius: 40px;
-    width: 100%;
-    margin-top: 7px;
-    margin-left: 5px;
+    min-width: 300px;
+    max-width: 400px;
+    border-radius: 15px;
+    width: 98%;
+    margin-top: 2%;
+    /* margin-left: 5px; */
+  }
+  .nouveau{
+    position:absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #0046af;
+    color: white;
+    top:10px;
+    right: 10px;
+    width: 50px;
+    height: 25px;
+    border-radius: 10px;
+    z-index: 1003;
   }
 
   .plant-details{
