--- a/css/trajet.css
+++ b/css/trajet.css
@@ -204,24 +204,25 @@ body {
     background-image: url(/Images/Trajet.png);
     background-size: cover;
     background-position:center;
-    height: 1000px;
+    height: 100vh;
   }
 
   .trajet-details{
     position: absolute;
-    padding-top: 70px;
     padding-left: 5px;
-    height: 100%;
+    /* height: 100vh; */
     left: 0;
     display: flex;
     flex-direction: column;
     width: 300px;
+    height: 100vh;
     color: rgb(0, 0, 0);
     background-color: rgba(213, 213, 213, 0.727);
     text-decoration: none;
   }
 
   .trajet-title{
+    padding-top: 70px;
     font-weight: bold;
     text-align: center;
     margin-top: 2px;
@@ -275,19 +276,9 @@ body {
   }
 
   .musique{
-    position: absolute;
-    padding-top: 5px;
-    padding-left: 5px;
-    height: 100%;
-    top: 430px;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
+    padding-top: 15px;
+    padding-bottom: 20px;
   }
-
   .musique h3{
     font-weight: bold;
     text-align: center;
