--- a/css/circuit.css
+++ b/css/circuit.css
@@ -203,51 +203,101 @@ body {
   }
 
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 749px) {
     .circuit-triathlon{
         position: relative;
-        width: 90%;
-        margin-top:10px;
-        margin-left:3%;
+        width: 100%;
+        margin-top:65px;
         display: flex;
         flex-direction: column;
         margin-bottom: 20px;
     }
+    /* MINUTEUR */
+    div.Timer {
+      position: absolute;
+      margin-top: 10vh;
+      display: flex;
+      width: 100%;
+      margin:auto;
+      box-sizing: border-box;
+      font-family: "Bank Gothic";
+      flex-direction: column;
+      align-items: center;
+      z-index: 1000;
+    }
+  .timebox {
+    display: flex;
+    align-items: center;
+    margin:0;
+    gap:40px;
+  }
+  .time{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }  
+  .time h2,
+  .time p {
+    margin: 0;
+  }
+  .time h2 {
+    font-size: 50px;
+    font-weight: 10;
+    color: #ffffff;
+    justify-content: space-between;
+  }
+  .time p {
+    margin: 0;
+    font-size: 15px;
+    font-weight: 50;
+    color: #ffffff;
+  }
+
+  /* SLIDER CIRCUITS */
+    .slider{
+      padding-top: 20px;
+      height: 100vh;
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      scrollbar-width: none;
+      scroll-behavior: smooth;
+    }
     .circuit{
-        margin-top: 50px;
+      padding-top: 150px;
+      flex: 1 0 100%;
+      scroll-snap-align: start;
+      object-fit: cover;
+      object-position: center;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: all 200ms;
     }
-    .circuit h2{
-        color: #ffffff;
+    .circuit iframe {
+      margin-top: 5px;
+      width: 90vw;
+      height: 350px;
     }
-    .circuit img {
-        width: 100%;
-        height: 250px;
-        object-fit: cover;
-        object-position: center;
-        border-radius: 10px;
-    }
-    .bikemap-link{
-        position: relative;
-        width: 100%;
-        height: 30px;
-        background-color: rgb(70, 35, 244);
-        border-radius: 5px;
-        color: white;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
+    .circuit p{
+      position: relative;
+      font-size: 13px;
+      text-justify: inter-word;
+      width: 90vw;
+      color: white;
     }
     .circuit-details{
         position: relative;
-        width: 100%;
+        width: 90vw;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         justify-content: center;
-        grid-column-gap: 5px;
-        grid-row-gap: 5px;
+        grid-column-gap: 15px;
+        grid-row-gap: 15px;
+        text-align: center;
     }
     .circuit-details div{
         position: relative;
@@ -257,77 +307,177 @@ body {
         align-items: center;
         color: black;
         height: 60px;
-        background-color: #c5c5c5;
+        background-color: #e6ecf2;
         border-radius: 10px;
         padding-inline: 20px;
         gap:3px;
     }
     .valeur{
         font-weight: bold;
-        font-size: 20px;
+        font-size: 16px;
     }
     .légende{
-        font-size: 14px;
+        font-size: 13px;
         color: #555555;
+    }
+
+    .slider-nav2{
+      margin-top: 80px;
+      display: flex;
+      width: 90vw;
+      justify-content: space-between;
+      column-gap: 1rem;
+      position: absolute;
+      left: 50%; /*Permet de centrer le menu avec le transform*/
+      transform: translate(-50%);
+      z-index: 1;
+    }
+    .slider-nav2 a{
+      width: 100px;
+      text-align: center;
+      padding: 5px;
+      text-decoration: none;
+      background-color: #fe9162;
+      color: #ffffff;
+      border-radius: 5px;
+      opacity: 0.75;
+      transition: opacity 250ms ease;
+    }
+    .slider-nav2 a.active{
+      opacity: 1;
+      font-weight: bold;
+    }
+
+    .button-swipe{
+      position: absolute;
+    }
+
+    .pre-btn, .nxt-btn{
+      border: none;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      top:320px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000000;
+      cursor: pointer;
+      opacity: 0.5;
+      border-radius: 50%;
+    }
+    .pre-btn{
+      left:5vw;
+      transform: rotate(180deg);
+    }
+    .nxt-btn{
+      left:85vw;
+    }
+    .button-swipe img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     
     }
 
-  @media screen and (min-width: 701px) {
+  @media screen and (min-width: 750px) {
     .circuit-triathlon{
-        position: relative;
-        width: 100%;
-        margin-top:10px;
-        margin-left:3%;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 20px;
+      position: relative;
+      width: 100%;
+      margin-top:65px;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+    }
+    /* MINUTEUR */
+    div.Timer {
+      position: absolute;
+      margin-top: 10vh;
+      display: flex;
+      width: 100%;
+      margin:auto;
+      box-sizing: border-box;
+      font-family: "Bank Gothic";
+      flex-direction: column;
+      align-items: center;
+      z-index: 1000;
+    }
+  .timebox {
+    display: flex;
+    align-items: center;
+    margin:0;
+    gap:40px;
+  }
+  .time{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }  
+  .time h2,
+  .time p {
+    margin: 0;
+  }
+  .time h2 {
+    font-size: 50px;
+    font-weight: 10;
+    color: #ffffff;
+    justify-content: space-between;
+  }
+  .time p {
+    margin: 0;
+    font-size: 15px;
+    font-weight: 50;
+    color: #ffffff;
+  }
+
+  /* SLIDER CIRCUITS */
+     .slider{
+      padding-top: 20px;
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      scrollbar-width: none;
+      scroll-behavior: smooth;
     }
     .circuit{
-        margin-top: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-left: 15%;
-        margin-right: 15%;
+      width: 750px;
+      padding-top: 150px;
+      flex: 1 0 100%;
+      scroll-snap-align: start;
+      object-fit: cover;
+      object-position: center;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: all 200ms;
     }
 
-    .type{
-        width: 50%;
-        max-width: 500px;
+    .circuit iframe {
+      margin-top: 5px;
+      width: 700px;
+      height: 500px;
     }
-    .circuit h2{
-        color: #ffffff;
-    }
-    .circuit img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        object-position: center;
-        border-radius: 10px;
-    }
-    .bikemap-link{
-        position: relative;
-        width: 100%;
-        height: 30px;
-        background-color: rgb(70, 35, 244);
-        border-radius: 5px;
-        color: white;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
+    
+    .circuit p{
+      position: relative;
+      font-size: 16px;
+      text-justify: inter-word;
+      width: 700px;
+      color: white;
     }
     .circuit-details{
         position: relative;
-        width: 40%;
+        width:600px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         justify-content: center;
-        grid-column-gap: 5px;
-        grid-row-gap: 5px;
+        grid-column-gap: 15px;
+        grid-row-gap: 15px;
+        text-align: center;
     }
     .circuit-details div{
         position: relative;
@@ -336,23 +486,88 @@ body {
         justify-content: center;
         align-items: center;
         color: black;
-        height: 80px;
-        background-color: #c5c5c5;
+        height: 60px;
+        background-color: #e6ecf2;
         border-radius: 10px;
         padding-inline: 20px;
-        gap:3px;;
+        gap:3px;
     }
     .valeur{
-        display: flex;
         font-weight: bold;
-        font-size: 20;
-        justify-items: center;
+        font-size: 16px;
     }
     .légende{
+        font-size: 13px;
         color: #555555;
     }
+
+    .slider-nav2{
+      margin-top: 80px;
+      display: flex;
+      width: 600px;
+      justify-content: space-between;
+      column-gap: 1rem;
+      position: absolute;
+      left: 50%; /*Permet de centrer le menu avec le transform*/
+      transform: translate(-50%);
+      z-index: 1;
+    }
+    .slider-nav2 a{
+      width: 150px;
+      text-align: center;
+      padding: 5px;
+      text-decoration: none;
+      background-color: #fe9162;
+      color: #ffffff;
+      border-radius: 5px;
+      opacity: 0.75;
+      transition: opacity 250ms ease;
+    }
+    .slider-nav2 a.active{
+      opacity: 1;
+      font-weight: bold;
+    }
+
+    .button-swipe{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 700px;
+      background-color: red;
+      position: absolute;
+      left: 50%; /*Permet de centrer le menu avec le transform*/
+      transform: translate(-50%);
+    }
+    .button-swipe button{
+      border: none;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top:400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000000;
+      opacity: 1;
+      border-radius: 50%;
+      z-index: 1005;
+    }
+    .pre-btn{
+      transform: rotate(180deg);
+      margin-left: -750px;
+    }
+    .nxt-btn{
+      margin-left: 750px;
+    }
     
-}
+    .button-swipe img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+
+    }
 
   .circuit-triathlon{
       transition: var(--animation-timing);
