--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #040404;
+  color: #ffffff;
 }
 
  /* ------------------------------------------------------------------------------------------------- */
@@ -34,6 +35,7 @@ body {
 
   /* BANDEAU -----------------------------*/
   .bandeau{
+    z-index: 1003;
     position: fixed;
     top: 0;
     left: 0;
@@ -43,14 +45,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1001;
   }
 
   .bandeau a {
     width: 35%;
     max-width: 200px;
     height: auto;
-    z-index: 1001;
+    z-index: 1003;
   }
 
   .bandeau img {
@@ -196,96 +197,138 @@ body {
 
   /*Section BIENVENUE */
   section.Bienvenue {
-    z-index: 0;
-    position:absolute;
-    z-index: 1000;
-    margin: 0;
+    position: absolute;
     top:60px;
     display: flex;
-    margin: 0;
-    width: 100%;
-    align-items: center;
-    height: 600px;
     justify-content: center;
-    background-image: url('../Images/GIF2.gif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow-x: hidden;
+    width: 100%;
   }
 
-  div.Timer {
-    display: flex;
-    width: 90%;
-    margin:auto;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-family: "Bank Gothic";
-    flex-direction: column;
+  @media screen and (max-width: 700px) {
+    .fond-gif{
+      position: fixed;
+      width: 100%;
+      height: calc(100vh - 60px);
+      background-image: url(/Images/GIF2.gif);
+      background-size: cover;
+      background-position: center;
+      z-index: 1000;
+    }
+  }
+  @media screen and (min-width: 701px) {
+    .fond-gif{
+      position: fixed;
+      display: flex;
+      justify-items: center;
+      width: 100%;
+      height: calc(100vh - 60px);
+      background-image: url(/Images/GIF2.gif);
+      background-size: 50%;
+      background-position: center;
+      background-repeat: no-repeat;
+      z-index: 1000;
+    } 
+      /* BULLES LOGOS */
+  .Bulles{
+    margin-top:60vh;
+    position: sticky;
+    top:80vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     align-items: center;
-    overflow-x: hidden;
-  }
-
-  .timebox {
-    display: flex;
-    align-items: center;
-    margin:0;
-    gap:40px;
-  }
-
-  .time{
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
     align-items: center;
     justify-content: space-between;
-  }  
-  .time h2,
-  .time p {
-    margin: 0;
+    width: 80vw;
+    height: 200px;
+    text-decoration: none;
   }
 
-  .time h2 {
-    font-size: 40px;
-    font-weight: 10;
-    color: #51d4fc;
-    justify-content: space-between;
+  .Bulles img{
+    opacity: 80%;
+    width: 80px;
   }
-  .time p {
-    margin: 0;
-    font-size: 10px;
-    font-weight: 50;
-    color: #ffffff;
+  .b-trajet{
+    margin-top: 4px;
+  }
+  .b-supporter{
+    margin-top: -4px;
+  }
+  }
+
+  /* FOND */
+  .fond-gif p{
+    position: absolute;
+    top: 0px;
+  }
+
+  /* CONTENUS */
+  .content{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-items: center;
+    text-align: center;
+    width: 100%;
+    height:200vh;
+    z-index: 1001;
+  }
+
+  .content{
+    top: 65vh;
   }
   .texte {
-    position: absolute;
-    margin: 0;
-    bottom: 0;
-    text-align: center;
-    max-width: 60%;
+    position: sticky;
+    top: -100px;
+    font-size: 30px;
+  }
+  .Debut{
+    color: #ffffff;
   }
 
-  #Début{
-    color: #ffffff;
-    gap: 1px;
-  }
-  #Fin{
-    margin-top: 1%;
+  .content1 .Fin{
     font-weight: 1000;
     color: #fe9162;
   }
+
+  /* BULLES LOGOS */
+  .Bulles{
+    margin-top:60vh;
+    position: sticky;
+    top:80vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    justify-content: center;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    align-items: center;
+    justify-content: space-between;
+    width: 80vw;
+    max-width: 400px;
+    height: 200px;
+    text-decoration: none;
+  }
+
+  .Bulles img{
+    opacity: 80%;
+    width: 80px;
+  }
+  .b-trajet{
+    margin-top: 4px;
+  }
+  .b-supporter{
+    margin-top: -4px;
+  }
+
 
   .Bienvenue {
       transition: var(--animation-timing);
   }
   .Bienvenue.menu-open {
     transform: translateX(calc(100vw*0.175));
-    overflow-x: hidden;
+    position: fixed;
   }
-
-
-
-
-
-
-
-
